Switched to using bibtex to move references to a separate file.

--- a/2-methods.tex
+++ b/2-methods.tex
@@ -1,2 +1,6 @@
 \section{Methods}
-testing testing
+This section gives a quick glance at the technologies used in the application.
+
+\subsection{Android client}
+
+\subsection{Node.js server}
