--- a/sneakspeak.tex
+++ b/sneakspeak.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 12pt, finnish]{article}
+\documentclass[a4paper, 12pt, english]{article}
 \usepackage{spconf,amsmath,epsfig}
 
 \usepackage[latin1]{inputenc}
@@ -15,7 +15,6 @@
 \captionsetup[table]{skip=10pt}
 
 
-
 \title{SGN-35016 Internet of things and media services \\ 
 	Project Work - SneakSpeak}
 \name{Iiro Nykänen, Ville Vaarala}
@@ -25,12 +24,11 @@
 	Tampere University of Technology
 }
 
+
 \begin{document}
 
 \maketitle
-\sloppy
-%\raggedbottom
-%\raggedright
+%\sloppy
 
 \input{0-abstract}
 
@@ -43,12 +41,9 @@
 \input{4-conclusions}
 
 \small
+
 \bibliographystyle{IEEEtran}
-\begin{thebibliography}{9}
-	\bibitem{gcm_implementation} Implementing an HTTP Connection Server, Google Developers, 2016. Available at: \url{https://developers.google.com/cloud-messaging/http}
-	%
-	
-\end{thebibliography}
+\bibliography{references}
 
 \vfill\pagebreak
 
