Started working on the introduction.

--- a/0-abstract.tex
+++ b/0-abstract.tex
@@ -1,5 +1,5 @@
 
 \begin{abstract}
 
-SneakSpeak is a self hosted group chat application. It conquers the market leaders Slack and Flowdock by giving organizations and teams ability to not to give 3rd parties access to the communication. The proof of concept consists of a Node.js GCM HTTP Connection Server \cite{gcm_implementation} and Android client. The server can be hosted in a local network e.g. on a Raspberry Pi computer.
+SneakSpeak is a self hosted group chat application. It conquers the market leaders Slack and Flowdock by giving organizations and teams ability to not to give 3rd parties access to the communication. The proof-of-concept consists of a Node.js GCM HTTP Connection Server \cite{gcm_implementation} and an Android client. The server can be hosted in a local network e.g. on a Raspberry Pi computer.
 \end{abstract}
