--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -1,2 +1,9 @@
+% Sometimes Latex can't hyphenate words automatically, in which case it needs to be told how it is done.
+\hyphenation{app-li-ca-ti-on app-li-ca-ti-ons soft-wa-re to-wards}
+
 \section{Introduction}
-This document...
+This document describes a simple messaging application proof-of-concept created as a project work for the course \emph{Internet of things and media services}. The application consists of a Node.js server and an Android client.
+
+The project originated from the realisation that nowadays different mobile instant messaging applications are very popular. Most of the people that own a modern smart phone have WhatsApp installed, the more critical users may prefer Telegram, and software developers are starting to migrate towards Slack. The thing these services have in common is that they provide the software as a service. All the messaging and information goes through their own servers, which may or may not be secure enough for your use.
+
+This project provides an alternative to these premade services. Since third party servers are deemed untrustworthy, the solution is for users to host their own private server.
