Wrote some introduction.

--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -4,6 +4,8 @@
 \section{Introduction}
 This document describes a simple messaging application proof-of-concept created as a project work for the course \emph{Internet of things and media services}. The application consists of a Node.js server and an Android client.
 
-The project originated from the realisation that nowadays different mobile instant messaging applications are very popular. Most of the people that own a modern smart phone have WhatsApp installed, the more critical users may prefer Telegram, and software developers are starting to migrate towards Slack. The thing these services have in common is that they provide the software as a service. All the messaging and information goes through their own servers, which may or may not be secure enough for your use.
+The project originated from the realisation that nowadays different mobile instant messaging applications are very popular. Most of the people that own a modern smart phone have WhatsApp installed, the more critical users may prefer Telegram, and software developers are starting to migrate towards Slack. The thing these services have in common is that they provide the software as a service. All the messaging and information goes through their own servers, which may or may not be secure enough for your use. This project provides an alternative to these premade services. Since third party servers are deemed untrustworthy, the solution is for users to host their own private servers.
 
-This project provides an alternative to these premade services. Since third party servers are deemed untrustworthy, the solution is for users to host their own private server.
+From this basic concept the project started to take shape. The first iterations of the core idea revolved around the messaging protocol, like if it were possible to use XMPP and websockets or if a server that only handled handshakes between clients would be a good idea. Eventually the project steered towards a push notification system, which is a quite popular way to implement instant messaging nowadays.
+
+{\color{red} 2.3. Right now our project is in a kind of ''research via implementation`` phase, in which we experiment how the push notification system and the cloud integration works. So far we have managed to implement initial messaging between client and server, but some things are not clear to us yet.}
