--- a/2-methods.tex
+++ b/2-methods.tex
@@ -4,3 +4,5 @@ This section gives a quick glance at the technologies used in the application.
 \subsection{Android client}
 
 \subsection{Node.js server}
+
+\subsection{Google Cloud Integration}
