--- a/sneakspeak.tex
+++ b/sneakspeak.tex
@@ -11,7 +11,8 @@
 \usepackage{url}
 \usepackage{subfigure}
 \usepackage{float} % Saa käyttöön kuvan pakotuksen paikalleen (H)
-\usepackage{caption} 
+\usepackage{caption}
+\usepackage{xcolor}
 \captionsetup[table]{skip=10pt}
 
 \title{SGN-35016 Internet of things and media services \\ 
