Describe doc in the abstract

--- a/0-abstract.tex
+++ b/0-abstract.tex
@@ -1,5 +1,7 @@
 
 \begin{abstract}
 
-SneakSpeak is a self hosted group chat application. It conquers the market leaders Slack and Flowdock by giving organizations and teams ability to not to give 3rd parties access to the communication. The proof-of-concept consists of a Node.js GCM HTTP Connection Server \cite{gcm_implementation} and an Android client. The server can be hosted in a local network e.g. on a Raspberry Pi computer.
+SneakSpeak is a self hosted group chat application. It conquers the market leaders Slack and Flowdock by giving organizations and teams ability to not to give 3rd parties access to the communication. The proof-of-concept consists of a Node.js GCM HTTP Connection Server  and an Android client. The server can be hosted in a local network e.g. on a Raspberry Pi computer.
+
+Methods and technologies used in the project work are explained in Methods chapter. Results and Conclusions will be written once the prototype is up and running.
 \end{abstract}
