--- a/4-conclusions.tex
+++ b/4-conclusions.tex
@@ -1,2 +1,4 @@
 \section{Conclusions}
-Something something success story.
+As a course assignment the project was successful and met the goals that were set in the beginning. The prototype application works, but a real implementation would require some serious planning and architecture revisioning. The project was a learning experience for both of us and it was nice to be able to dedicate time and effort into areas that were genuinely interesting.
+
+5/5 would recommend.
