--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -1,11 +1,13 @@
 % Sometimes Latex can't hyphenate words automatically, in which case it needs to be told how it is done.
-\hyphenation{app-li-ca-ti-on app-li-ca-ti-ons soft-wa-re to-wards}
+%\hyphenation{app-li-ca-ti-on app-li-ca-ti-ons soft-wa-re to-wards}
 
 \section{Introduction}
-This document describes a simple messaging application proof-of-concept created as a project work for the course \emph{Internet of things and media services}. The application consists of a Node.js server and an Android client.
+This document describes a simple messaging application proof-of-concept created as a project work for the course \emph{Internet of things and media services}. The application consists of a Node.js server, an Android client and Thing\texttrademark-integration.
 
 The project originated from the realisation that nowadays different mobile instant messaging applications are very popular. Most of the people that own a modern smart phone have WhatsApp installed, the more critical users may prefer Telegram, and software developers are starting to migrate towards Slack. The thing these services have in common is that they provide the software as a service. All the messaging and information goes through their own servers, which may or may not be secure enough for your use. This project provides an alternative to these premade services. Since third party servers are deemed untrustworthy, the solution is for users to host their own private servers.
 
-From this basic concept the project started to take shape. The first iterations of the core idea revolved around the messaging protocol, like if it were possible to use XMPP and websockets or if a server that only handled handshakes between clients would be a good idea. Eventually the project steered towards a push notification system, which is a quite popular way to implement instant messaging nowadays.
+From this basic concept the project started to take shape. The first iterations of the core idea revolved around the messaging protocol, like if it were possible to use XMPP and websockets or if a server that only handled handshakes between clients would be a good idea. From this we moved on to a push notification system using Google Cloud Messaging API:s, and eventually steered towards a half and half solution.
 
-{\color{red} 2.3. Right now our project is in a kind of ''research via implementation`` phase, in which we experiment how the push notification system and the cloud integration works. So far we have managed to implement initial messaging between client and server, but some things are not clear to us yet.}
+The project was a long term implementation via exprerimentation, during which we ended up changing lots of things in both backend implementation and in the Android client application. The end result is a rough working prototype of what the real application could be, although for a real implementation the project would require better messaging protocols, security implementations, and other code base architecture revisions. Future additions could include a web, iOS and Windows Phone applications, but the project development will probably halt after the course.
+
+%{\color{red} 2.3. Right now our project is in a kind of ''research via implementation`` phase, in which we experiment how the push notification system and the cloud integration works. So far we have managed to implement initial messaging between client and server, but some things are not clear to us yet.}
