--- a/sneakspeak.tex
+++ b/sneakspeak.tex
@@ -15,6 +15,9 @@
 \usepackage{xcolor}
 \captionsetup[table]{skip=10pt}
 
+\hyphenation{sneak-speak so-me-thing main-ac-ti-vi-ty chat-ac-ti-vi-ty}
+%\usepackage[none]{hyphenat}
+
 \title{SGN-35016 Internet of things and media services \\ 
 	Project Work - SneakSpeak}
 \name{Iiro Nykänen, Ville Vaarala}
