Wrote more Android stuff.

--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -6,7 +6,7 @@ This document describes a simple messaging application proof-of-concept created 
 
 The project originated from the realisation that nowadays different mobile instant messaging applications are very popular. Most of the people that own a modern smart phone have WhatsApp installed, the more critical users may prefer Telegram, and software developers are starting to migrate towards Slack. The thing these services have in common is that they provide the software as a service. All the messaging and information goes through their own servers, which may or may not be secure enough for your use. This project provides an alternative to these premade services. Since third party servers are deemed untrustworthy, the solution is for users to host their own private servers.
 
-From this basic concept the project started to take shape. The first iterations of the core idea revolved around the messaging protocol; should we go with a ''normal`` http solution or if it were possible to use XMPP and websockets or if a server that only handled handshakes between clients would be a good idea. Eventually we moved on to a push notification system using Google Cloud Messaging API:s, but in the end steered towards a half and half solution by implementing upstream messaging via http.
+From this basic concept the project started to take shape. The first iterations of the core idea revolved around the messaging protocol; should we go with a ''normal`` http solution or if it were possible to use XMPP and websockets or if a server that only handled handshakes between clients would be a good idea. Eventually we moved on to a push notification system using Google Cloud Messaging API:s, but in the end steered towards a half and half solution by implementing upstream messaging via http and downstream messaging with gcm.
 
 The project was a long term implementation via exprerimentation, during which we ended up changing lots of things in both backend implementation and in the Android client application. The end result is a rough working prototype of what the real application could be, although for a real implementation the project would require better messaging protocols, security implementations, and other code base architecture revisions for the sake maintainability. Future additions could include a web, iOS and Windows Phone applications, but the project development will probably halt after the course.
 
