--- a/2-methods.tex
+++ b/2-methods.tex
@@ -16,9 +16,9 @@ Gcm-packages were required in the application in two places. During registration
 
 \subsubsection{Development}
 
-The application was written with a sort of explorative mind set. A lot of the components used, like receivers (which basically were used to deliver messages internally from one class to another), were not too familiar and it took time to understand how they'd work. The application also served as a playground of sorts, and parts of it were initially implemented very differently. For example, at some point the UI-layouts were partially implemented with Anko DSL instead of the traditional XML-approach. After trying it out it was decided that XML would be the way to go and parts that used DSL were refactored.
+The application was written with a sort of explorative mind set. A lot of the components used, like receivers (which basically were used to deliver messages internally from one class to another), were not too familiar and it took time to understand how they'd work. The application also served as a playground of sorts, and parts of it were initially implemented very differently. For example, at some point the UI-layouts were partially implemented with Anko DSL instead of the traditional XML-approach. After trying it out it was decided that XML would be the way to go and the parts that used DSL were refactored.
 
-During the development process we faced many problems with the platform. Some were easier to debug, others took lots of time. For example Proguard, which is a program used to obfuscate and minify Java bytecode, didn't cooperate at times and at the end of the project our \verb|proguard-rules.pro|-file was roughly 150 lines including comments and whitespace. Due to obfuscation we also had some problems with debugging stacktraces, which were usually something like ''\verb|exception at a.b.c.d|``. 
+During the development process we faced many problems with the platform. Some were easier to debug, others took lots of time. For example Proguard, which is a program used to obfuscate and minify Java bytecode, didn't cooperate at times and at the end of the project our \verb|proguard-rules.pro|-file was roughly 150 lines including comments and whitespace. Due to obfuscation we also had some problems with debugging stacktraces, which were usually something like ''\verb|exception at a.b.c.d|``. Eventually most of the problems were solved with the help of Google and StackOverflow.
 
 \subsection{Node.js server}
 The server is a Node.js application, more specifically Sails.js application. Users and channels are managed and stored on the server. Messages instead are just transmitted to the receiver or receivers without storing them to the database. 
