--- a/3-results.tex
+++ b/3-results.tex
@@ -3,9 +3,7 @@ During the course we built a prototype for self hosted Android chat application 
 
 All the code is hosted and shared on GitHub with MIT open source license: \url{https://github.com/SneakSpeak/}
 
-
-
-Some stuff about the Android application... Some stuff about the Android application... Some stuff about the Android application... Some stuff about the Android application...
+The Android application prototype is roughly working the way it was meant to work. Some parts of the original idea, e.g. multiple servers, are not supported. As the application is only a prototype we decided not to upload it anywhere, but videos of it in action can be found on our GitHub-page at \url{https://github.com/SneakSpeak/sp-android}.
 
 The Node.js server can be hosted on almost any system which has Node.js and npm installed. Our implementation uses PostgreSQL database but one can choose the database they want to use and just change the Waterline adapter. Instructions on how one can host their own SneakSpeak server can be found on GitHub: \url{https://github.com/SneakSpeak/sp-server}.
 
