--- a/references.bib
+++ b/references.bib
@@ -130,3 +130,48 @@
 	year={2016},
 	note={Accessed 1.3.2016. [Online]. Available at: \url{https://developers.google.com/cloud-messaging/http}}
 }
+
+@Book{node,
+	author={{Node.js Foundation}},
+	title={Node.js},
+	year={2016},
+	note={Available at: \url{https://nodejs.org/en/}}
+}
+
+@Book{sails,
+	author={{Mike McNeil}},
+	title={Sails.js},
+	year={2016},
+	note={Available at: \url{http://sailsjs.org/}}
+}
+
+@Book{sneakrepo,
+	author={Ville Vaarala and Iiro Nyk{\"a}nen},
+	title={SneakSpeak},
+	year={2016},
+	note={Available at: \url{https://github.com/SneakSpeak/}}	
+}
+
+@Book{sails-hook,
+	author={Jimmy Aumard},
+	title={sails-hook-push},
+	year={2015},
+	note={Available at: \url{https://www.npmjs.com/package/sails-hook-push}}	
+}
+
+@Book{gcm-ccs,
+	author={Jacob Parker},
+	title={node-gcm-ccs},
+	year={2015},
+	note={Available at: \url{https://github.com/jacobp100/node-gcm-ccs}}
+}
+
+@Book{gcm-xmpp,
+	author={{Google Developers}},
+	title={XMPP Connection Server Reference},
+	year={2016},
+	note={Available at: \url{https://developers.google.com/cloud-messaging/xmpp-server-ref}}
+}
+
+
+
