--- a/3-results.tex
+++ b/3-results.tex
@@ -1,10 +1,10 @@
 \section{Results}
 During the course we built a prototype for self hosted Android chat application with a possibility to add Internet of Things devices to send messages to chat channels. The prototype is split to two applications: Android client app and Node.js server application. We also hacked a Node.js package which can be used to send simple messags to a specific channel.
 
-All the code is hosted and shared on GitHub with MIT open source license: \url{https://github.com/SneakSpeak/}
+All the code is hosted and shared on GitHub \cite{sneakrepo} with MIT open source license.
 
-The Android application prototype is roughly working the way it was meant to work. Some parts of the original idea, e.g. multiple servers, are not supported. As the application is only a prototype we decided not to upload it anywhere, but videos of it in action can be found on our GitHub-page at \url{https://github.com/SneakSpeak/sp-android}.
+The Android application prototype is roughly working the way it was meant to work. Some parts of the original idea, e.g. multiple servers, are not supported. As the application is only a prototype we decided not to upload it anywhere, but videos of it in action can be found on our GitHub-page \cite[sp-android]{sneakrepo}.
 
-The Node.js server can be hosted on almost any system which has Node.js and npm installed. Our implementation uses PostgreSQL database but one can choose the database they want to use and just change the Waterline adapter. Instructions on how one can host their own SneakSpeak server can be found on GitHub: \url{https://github.com/SneakSpeak/sp-server}.
+The Node.js server can be hosted on almost any system which has Node.js and npm installed. Our implementation uses PostgreSQL database but one can choose the database they want to use and just change the Waterline adapter. Instructions on how one can host their own SneakSpeak server can be found on GitHub \cite[sp-server]{sneakrepo}.
 
 The Node.js package for Internet of Things devices is extremely simple. It just sends messages to the specified channel on behalf of the user. This causes the user to not to receive messages sent by the device. The functionality is incomplete but demonstrates how real life measurements can be a part of project management and team collaboration. 
