Added Kotlin ref.

--- a/2-methods.tex
+++ b/2-methods.tex
@@ -2,7 +2,7 @@
 This section gives a quick glance at the technologies used in the application.
 
 \subsection{Android client}
-The Android application was written as a quick prototype to demonstrate the proof-of-concept. Code was written using the native SDK and a JVM-language called Kotlin, which compiles to Java bytecode. The main goal of the prototype was to allow messaging between devices via the provided self-hosted server. It is noteworthy that the code was written fast with functionality in mind, with little regards to maintainability or good practices. So if you take a look at it, don't judge us.
+The Android application was written as a quick prototype to demonstrate the proof-of-concept. Code was written using the native SDK and a JVM-language called Kotlin \cite{kotlin}, which compiles to Java bytecode. The main goal of the prototype was to allow messaging between devices via the provided self-hosted server. It is noteworthy that the code was written fast with functionality in mind, with little regards to maintainability or good practices. So if you take a look at it, don't judge us.
 
 \subsubsection{Structure}
 
