--- a/references.bib
+++ b/references.bib
@@ -173,5 +173,12 @@
 	note={Available at: \url{https://developers.google.com/cloud-messaging/xmpp-server-ref}}
 }
 
+@Book{kotlin,
+	author={{JetBrains }},
+	title={Kotlin Programming Language},
+	year={2016},
+	note={Available at: \url{https://kotlinlang.org/}}
+}
+
 
 
